Fixed some medium issues in SonarQube analysis