@@ -37,6 +37,8 @@ import org.junit.jupiter.api.Test;
 import java.util.List;
 import java.util.Map;
 
+import org.assertj.core.api.InstanceOfAssertFactories;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -54,7 +56,7 @@ class NativeDataSchemaMapperTest {
 
         var fields = (List<?>) result.get("fields");
         var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(true);
+        assertThat((Boolean) fieldMap.get("defaultValue")).isTrue();
     }
 
     @Test
@@ -66,7 +68,7 @@ class NativeDataSchemaMapperTest {
 
         var fields = (List<?>) result.get("fields");
         var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(false);
+        assertThat((Boolean) fieldMap.get("defaultValue")).isFalse();
     }
 
     @Test
@@ -77,8 +79,9 @@ class NativeDataSchemaMapperTest {
         var result = (Map<?, ?>) mapper.fromDataSchema(schema);
 
         var fields = (List<?>) result.get("fields");
-        var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(List.of());
+        var fieldMap = (Map<?, ?>) fields.getFirst();
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", List.of());
     }
 
     @Test
@@ -93,7 +96,8 @@ class NativeDataSchemaMapperTest {
 
         var fields = (List<?>) result.get("fields");
         var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(List.of("a", "b"));
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", List.of("a", "b"));
     }
 
     @Test
@@ -108,7 +112,8 @@ class NativeDataSchemaMapperTest {
 
         var fields = (List<?>) result.get("fields");
         var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo("AREA");
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", "AREA");
     }
 
     @Test
@@ -120,7 +125,8 @@ class NativeDataSchemaMapperTest {
 
         var fields = (List<?>) result.get("fields");
         var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(Map.of());
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", Map.of());
     }
 
     @Test
@@ -135,7 +141,8 @@ class NativeDataSchemaMapperTest {
 
         var fields = (List<?>) result.get("fields");
         var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(Map.of("key1", "val1", "key2", "val2"));
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", Map.of("key1", "val1", "key2", "val2"));
     }
 
     @Test
